--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,60 @@ header {
     margin-right: auto;
     margin-left: 200px;
 }
+
+.information_header {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 800;
+    margin: 40px 0;
+    text-align: center;
+}
+
+.information {
+    padding: 10px;
+    background: #fff;
+}
+
+.content_flex {
+    display: flex;
+    justify-content: center;
+}
+
+.image_containers {
+    padding-right: 80px;
+    padding-bottom: 20px;
+}
+
+.images {
+    border-radius: 10px;
+    border: #3882F6;
+    border-style: solid;
+    height: 200px;
+    width: 200px;
+}
+
+.image_subtext {
+    text-align: center;
+}
+
+.quote {
+    background: #E5E7EB;
+    text-align: center;
+    padding: 100px 0;
+}
+
+.italics {
+    display: inline-block;
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+    color: #1F2937;
+    text-align: left;
+    background: #E5E7EB;
+}
+
+.author {
+    display: inline-block;
+    font-size: 18px;
+    text-align: right;
+}
